--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                 </a>
             </div>
             <div id="wait-txs"></div>
+            <div class="spinner-border" role="status" id="spinner"></div>
             <div id="table"></div>
             <h4 id="wait-packages">Please wait until all Python libraries have finished loading...</h4>
         </div>
